Remove node_modules and package-lock.json

--- a/0.0.2
+++ b/0.0.2
@@ -1,1 +1,2 @@
 -Be careful with the swagger in order to identify clearly the required fields and know clearly how to use all required fields.
+Remove-Item -Recurse -Force node_modules, package-lock.json
