Add explanation of JWT vs Sessions
Clarify the differences between JWT and Sessions.

--- a/0.0.3.md
+++ b/0.0.3.md
@@ -1,2 +1,6 @@
 We use :: when defining a function out of the scope of its parent class.
 VLSM is not that great for small networks.
+
+
+
+What is the difference between JWT and Sessions, JWT is stateless, it doesn't know anything related to paste thing which might have taken place in the app's page, while sessions are that good enough to handle that in a good and clear way.
